dyn_partial_eq_derive/tests/ui/compile_errors/item-contains-non-as-any-trait-object.rs
use dyn_partial_eq::DynPartialEq;
use dyn_partial_eq_derive::PartialEqDyn;

trait NonAsAny: DynPartialEq {}

#[derive(PartialEqDyn)]
struct TestStruct(Box<dyn NonAsAny>);

fn main() {}
